--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- plugin versions -->
+    <archetype-plugin.version>2.2</archetype-plugin.version>
     <bundle-plugin.version>2.3.6</bundle-plugin.version>
     <compiler-plugin.version>2.3.2</compiler-plugin.version>
     <enforcer-plugin.version>1.0.1</enforcer-plugin.version>
@@ -137,6 +138,11 @@
             </Import-Package>
           </instructions>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-archetype-plugin</artifactId>
+        <version>${archetype-plugin.version}</version>
       </plugin>
     </plugins>
 
