--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,17 @@
     <log4j.version>1.2.16</log4j.version>
     <org.slf4j.version>1.6.1</org.slf4j.version>
 
-    <!-- dependency Versions -->
+    <!-- test dependency versions -->
+    <junit.version>4.10</junit.version>
+
+    <!-- dependency versions -->
+    <commons-lang.version>2.6</commons-lang.version>
     <jetty.version>7.6.3.v20120416</jetty.version>
+    <jruby.version>1.6.7.2</jruby.version>
+    <maven-plugin-api.version>2.0.3</maven-plugin-api.version>
+    <quava.version>11.0.2</quava.version>
+
+
   </properties>
 
   <build>
@@ -260,10 +269,54 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- Test Dependencies -->
       <dependency>
-	<groupId>org.eclipse.jetty</groupId>
-	<artifactId>jetty-servlet</artifactId>
-	<version>${jetty.version}</version>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <!--END Test Dependencies-->
+
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${quava.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>${commons-lang.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-project</artifactId>
+        <version>${maven-plugin-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-plugin-api</artifactId>
+        <version>${maven-plugin-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-artifact</artifactId>
+        <version>${maven-plugin-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-plugin-tools-api</artifactId>
+        <version>${maven-plugin-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-servlet</artifactId>
+        <version>${jetty.version}</version>
+      </dependency>
+      <dependency>
+	<groupId>org.jruby</groupId>
+	<artifactId>jruby</artifactId>
+	<version>${jruby.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
