--- a/pom.xml
+++ b/pom.xml
@@ -86,12 +86,16 @@
 
     <!-- dependency versions -->
     <commons-lang.version>2.6</commons-lang.version>
+    <derby.version>10.8.2.2</derby.version>
+    <javax-mail.version>1.4.4</javax-mail.version>
+    <javax.servlet.version>2.5</javax.servlet.version>
     <jetty.version>7.6.3.v20120416</jetty.version>
     <jruby.version>1.6.7.2</jruby.version>
+    <jstl.version>1.2</jstl.version>
     <maven-plugin-api.version>2.0.3</maven-plugin-api.version>
     <quava.version>11.0.2</quava.version>
-
-
+    <spring.version>3.1.0.RELEASE</spring.version>
+    <unboundid-ldapsdk.version>1.1.3</unboundid-ldapsdk.version>
   </properties>
 
   <build>
@@ -276,8 +280,36 @@
         <version>${junit.version}</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${spring.version}</version>
+        <scope>test</scope>
+      </dependency>
       <!--END Test Dependencies-->
 
+      <!-- Databases -->
+      <dependency>
+        <groupId>org.apache.derby</groupId>
+        <artifactId>derby</artifactId>
+        <version>${derby.version}</version>
+      </dependency>
+
+      <!-- eMail -->
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>${javax-mail.version}</version>
+      </dependency>
+
+      <!-- LDAP -->
+      <dependency>
+        <groupId>com.unboundid</groupId>
+        <artifactId>unboundid-ldapsdk</artifactId>
+        <version>${unboundid-ldapsdk.version}</version>
+      </dependency>
+
+      <!-- Tools -->
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
@@ -288,6 +320,13 @@
         <artifactId>commons-lang</artifactId>
         <version>${commons-lang.version}</version>
       </dependency>
+      <dependency>
+	<groupId>org.jruby</groupId>
+	<artifactId>jruby</artifactId>
+	<version>${jruby.version}</version>
+      </dependency>
+
+      <!-- Maven -->
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-project</artifactId>
@@ -308,17 +347,54 @@
         <artifactId>maven-plugin-tools-api</artifactId>
         <version>${maven-plugin-api.version}</version>
       </dependency>
+
+      <!-- Spring -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+      <!-- Web -->
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>${javax.servlet.version}</version>
+        <scope>provided</scope>
+      </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-servlet</artifactId>
         <version>${jetty.version}</version>
       </dependency>
       <dependency>
-	<groupId>org.jruby</groupId>
-	<artifactId>jruby</artifactId>
-	<version>${jruby.version}</version>
+	<groupId>jstl</groupId>
+	<artifactId>jstl</artifactId>
+	<version>${jstl.version}</version>
       </dependency>
     </dependencies>
+
   </dependencyManagement>
 
 </project>
