Add jcommander for parsing cli args

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <derby.version>10.8.2.2</derby.version>
     <javax-mail.version>1.4.4</javax-mail.version>
     <javax.servlet.version>2.5</javax.servlet.version>
+    <jcommander.version>1.26</jcommander.version>
     <jetty.version>7.6.3.v20120416</jetty.version>
     <jline.version>2.6</jline.version>
     <jruby.version>1.6.7.2</jruby.version>
@@ -308,6 +309,11 @@
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
         <version>${commons-lang.version}</version>
+      </dependency>
+      <dependency>
+	<groupId>com.beust</groupId>
+	<artifactId>jcommander</artifactId>
+	<version>1.26</version>
       </dependency>
       <dependency>
         <groupId>jline</groupId>
