Update gem plugin to run during generate-sources phase

--- a/pom.xml
+++ b/pom.xml
@@ -242,7 +242,7 @@
               <goals>
                 <goal>install</goal>
               </goals>
-              <phase>install</phase>
+              <phase>generate-sources</phase>
               <inherited>true</inherited>
               <!-- <configuration> -->
               <!--   <installArgs>sass</installArgs> -->
