--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <!-- dependency versions -->
     <commons-lang.version>2.6</commons-lang.version>
     <derby.version>10.8.2.2</derby.version>
+    <gson.version>2.2.1</gson.version>
     <javax-mail.version>1.4.4</javax-mail.version>
     <javax.servlet.version>2.5</javax.servlet.version>
     <jcommander.version>1.26</jcommander.version>
@@ -386,6 +387,11 @@
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
         <version>${commons-lang.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>${gson.version}</version>
       </dependency>
       <dependency>
 	<groupId>com.beust</groupId>
