--- a/model-fixtures/pom.xml
+++ b/model-fixtures/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.upgradingdave</groupId>
   <artifactId>model-fixtures</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <dependencies>
     <dependency>
