Move jaxb utilities into jaxb-tools module

--- a/model-fixtures/pom.xml
+++ b/model-fixtures/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>gson</artifactId>
       <version>2.2.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.upgradingdave</groupId>
+      <artifactId>jaxb-tools</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
