--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <modules>
     <module>model-fixtures</module>
     <module>upgradingdave-jdbc</module>
+    <module>jaxb-tools</module>
   </modules>
 
   <properties>
@@ -378,6 +379,18 @@
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
         <version>${org.slf4j.version}</version>
+      </dependency>
+
+      <!-- upgradingdave -->
+      <dependency>
+        <groupId>com.upgradingdave</groupId>
+        <artifactId>model-fixtures</artifactId>
+        <version>2.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>com.upgradingdave</groupId>
+        <artifactId>jaxb-tools</artifactId>
+        <version>1.0-SNAPSHOT</version>
       </dependency>
 
       <!-- Databases -->
