--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
   <modules>
     <module>model-fixtures</module>
+    <module>models</module>
     <module>upgradingdave-jdbc</module>
     <module>jaxb-tools</module>
   </modules>
@@ -225,11 +226,6 @@
             </Import-Package>
           </instructions>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-archetype-plugin</artifactId>
-        <version>${archetype-plugin.version}</version>
       </plugin>
 
       <!-- Use this to create source jar when you deploy to repo -->
