--- a/overlays/json2/pom.xml
+++ b/overlays/json2/pom.xml
@@ -9,11 +9,11 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.twitter</groupId>
-  <artifactId>bootstrap</artifactId>
-  <name>bootstrap</name>
+  <groupId>json2</groupId>
+  <artifactId>json2</artifactId>
+  <name>json2</name>
   <packaging>war</packaging>
-  <version>2.2.1</version>
+  <version>43d7836</version>
 
   <build>
     <plugins>
