--- a/overlays/underscore/pom.xml
+++ b/overlays/underscore/pom.xml
@@ -9,11 +9,11 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.twitter</groupId>
-  <artifactId>bootstrap</artifactId>
-  <name>bootstrap</name>
+  <groupId>underscore</groupId>
+  <artifactId>underscore</artifactId>
+  <name>underscore</name>
   <packaging>war</packaging>
-  <version>2.2.1</version>
+  <version>1.4.3</version>
 
   <build>
     <plugins>
