--- a/overlays/underscore/src/main/webapp/WEB-INF/web.xml
+++ b/overlays/underscore/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,6 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-  <display-name>bootstrap</display-name>
+  <display-name>underscore</display-name>
 
 </web-app>
