--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     <module>models</module>
     <module>upgradingdave-jdbc</module>
     <module>jaxb-tools</module>
+    <module>test-utils</module>
+    <module>overlays/bootstrap</module>
+    <module>overlays/jquery</module>
+    <module>overlays/json2</module>
+    <module>overlays/backbone</module>
+    <module>overlays/underscore</module>
   </modules>
 
   <properties>
@@ -51,7 +57,7 @@
     <jcommander.version>1.26</jcommander.version>
     <jetty.version>7.6.3.v20120416</jetty.version>
     <jline.version>2.6</jline.version>
-    <jruby.version>1.6.7.2</jruby.version>
+    <jruby.version>1.6.7</jruby.version>
     <jstl.version>1.2</jstl.version>
     <maven-plugin-api.version>2.0.3</maven-plugin-api.version>
     <quava.version>11.0.2</quava.version>
@@ -272,33 +278,42 @@
         </plugin>
         <plugin>
           <groupId>org.mortbay.jetty</groupId>
-          <artifactId>maven-jetty-plugin</artifactId>
-          <version>${jetty-plugin.version}</version>
+          <artifactId>jetty-maven-plugin</artifactId>
           <configuration>
-            <scanIntervalSeconds>10</scanIntervalSeconds>
-            <stopKey>close</stopKey>
-            <stopPort>9999</stopPort>
+            <useTestScope>true</useTestScope>
+            <stopKey>stop</stopKey>
+            <stopPort>8079</stopPort>
+            <webAppConfig>
+              <!-- Use this if need to define jndi jdbc connection -->
+              <!--<jettyEnvXml>${basedir}/../jetty/jetty-env.xml</jettyEnvXml>-->
+              <!--<descriptor>${basedir}/src/main/resources/web-dev.xml</descriptor>-->
+              <contextPath>/</contextPath>
+            </webAppConfig>
+            <scanIntervalSeconds>3</scanIntervalSeconds>
+            <scanTargetPatterns>
+              <scanTargetPattern>
+                <directory>src/main/webapp</directory>
+                <includes>
+                  <include>**/*.jsp</include>
+                </includes>
+              </scanTargetPattern>
+            </scanTargetPatterns>
+            <!--<connectors>-->
+            <!--<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">-->
+            <!--<port>8080</port>-->
+            <!--<maxIdleTime>60000</maxIdleTime>-->
+            <!--</connector>-->
+            <!--<connector implementation="org.eclipse.jetty.server.ssl.SslSelectChannelConnector">-->
+            <!--<port>8443</port>-->
+            <!--<maxIdleTime>60000</maxIdleTime>-->
+            <!--&lt;!&ndash;remember to copy security/certs/securitywebapp-ssl.keystore to target directory &ndash;&gt;-->
+            <!--<keystore>${project.build.directory}/securitywebapp-ssl.keystore</keystore>-->
+            <!--<password>securitywebapp</password>-->
+            <!--<keyPassword>securitywebapp</keyPassword>-->
+            <!--<needClientAuth>true</needClientAuth>-->
+            <!--</connector>-->
+            <!--</connectors>-->
           </configuration>
-          <!-- <executions> -->
-          <!--   <execution> -->
-          <!--     <id>start-jetty</id> -->
-          <!--     <phase>pre-integration-test</phase> -->
-          <!--     <goals> -->
-          <!--       <goal>run</goal> -->
-          <!--     </goals> -->
-          <!--     <configuration> -->
-          <!--       <scanIntervalSeconds>0</scanIntervalSeconds> -->
-          <!--       <daemon>true</daemon> -->
-          <!--     </configuration> -->
-          <!--   </execution> -->
-          <!--   <execution> -->
-          <!--     <id>stop-jetty</id> -->
-          <!--     <phase>post-integration-test</phase> -->
-          <!--     <goals> -->
-          <!--       <goal>stop</goal> -->
-          <!--     </goals> -->
-          <!--   </execution> -->
-          <!-- </executions> -->
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -426,24 +441,19 @@
         <artifactId>gson</artifactId>
         <version>${gson.version}</version>
       </dependency>
-      <dependency>
-        <groupId>com.beust</groupId>
-        <artifactId>jcommander</artifactId>
-        <version>1.26</version>
-      </dependency>
-      <dependency>
-        <groupId>jline</groupId>
-        <artifactId>jline</artifactId>
-        <version>${jline.version}</version>
-      </dependency>
+      <!--<dependency>-->
+        <!--<groupId>com.beust</groupId>-->
+        <!--<artifactId>jcommander</artifactId>-->
+        <!--<version>1.26</version>-->
+      <!--</dependency>-->
+      <!--<dependency>-->
+        <!--<groupId>jline</groupId>-->
+        <!--<artifactId>jline</artifactId>-->
+        <!--<version>${jline.version}</version>-->
+      <!--</dependency>-->
       <dependency>
         <groupId>org.jruby</groupId>
         <artifactId>jruby-complete</artifactId>
-        <version>${jruby.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jruby</groupId>
-        <artifactId>jruby</artifactId>
         <version>${jruby.version}</version>
       </dependency>
 
@@ -504,15 +514,14 @@
         <version>${javax.servlet.version}</version>
         <scope>provided</scope>
       </dependency>
+      <!--<dependency>-->
+        <!--<groupId>org.eclipse.jetty</groupId>-->
+        <!--<artifactId>jetty-servlet</artifactId>-->
+      <!--</dependency>-->
       <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-servlet</artifactId>
-        <version>${jetty.version}</version>
-      </dependency>
-      <dependency>
-	<groupId>jstl</groupId>
-	<artifactId>jstl</artifactId>
-	<version>${jstl.version}</version>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${jstl.version}</version>
       </dependency>
     </dependencies>
 
