--- a/overlays/bootstrap/pom.xml
+++ b/overlays/bootstrap/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.twitter</groupId>
-  <artifactId>bootstrap</artifactId>
+  <groupId>com.upgradingdave.overlays</groupId>
+  <artifactId>twitter-bootstrap</artifactId>
   <name>bootstrap</name>
   <packaging>war</packaging>
   <version>2.2.1</version>
