--- a/overlays/underscore/pom.xml
+++ b/overlays/underscore/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>underscore</groupId>
+  <groupId>com.upgradingdave.overlays</groupId>
   <artifactId>underscore</artifactId>
   <name>underscore</name>
   <packaging>war</packaging>
