--- a/pom.xml
+++ b/pom.xml
@@ -400,6 +400,17 @@
       </dependency>
       <dependency>
         <groupId>com.upgradingdave</groupId>
+        <artifactId>models</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>com.upgradingdave</groupId>
+        <artifactId>test-utils</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.upgradingdave</groupId>
         <artifactId>jaxb-tools</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency>
