--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
     <commons-lang.version>2.6</commons-lang.version>
     <derby.version>10.8.2.2</derby.version>
     <gson.version>2.2.1</gson.version>
+    <hsqldb.version>2.2.8</hsqldb.version>
     <javax-mail.version>1.4.4</javax-mail.version>
     <javax.servlet.version>2.5</javax.servlet.version>
     <jcommander.version>1.26</jcommander.version>
@@ -421,6 +422,12 @@
         <artifactId>derby</artifactId>
         <version>${derby.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.hsqldb</groupId>
+        <artifactId>hsqldb</artifactId>
+        <version>${hsqldb.version}</version>
+      </dependency>
+
 
       <!-- eMail -->
       <dependency>
@@ -515,6 +522,11 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
         <version>${spring.version}</version>
       </dependency>
 
