--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -8,9 +8,9 @@
   </parent>
 
   <groupId>com.upgradingdave</groupId>
-  <artifactId>upgradingdave-jdbc</artifactId>
+  <artifactId>jdbc</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
@@ -30,6 +30,17 @@
       <version>1.6.1</version>
       <scope>runtime</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.upgradingdave</groupId>
+      <artifactId>models</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
