--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <modules>
     <module>model-fixtures</module>
     <module>models</module>
-    <module>upgradingdave-jdbc</module>
+    <module>jdbc</module>
     <module>jaxb-tools</module>
     <module>test-utils</module>
     <module>overlays/bootstrap</module>
@@ -402,7 +402,7 @@
       <dependency>
         <groupId>com.upgradingdave</groupId>
         <artifactId>models</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>com.upgradingdave</groupId>
