--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,12 @@
   </organization>
 
   <modules>
+    <module>encryption</module>
     <module>model-fixtures</module>
     <module>models</module>
     <module>jdbc</module>
     <module>jaxb-tools</module>
     <module>test-utils</module>
-    <module>overlays/bootstrap</module>
-    <module>overlays/jquery</module>
-    <module>overlays/json2</module>
-    <module>overlays/backbone</module>
-    <module>overlays/underscore</module>
   </modules>
 
   <properties>
@@ -52,6 +48,7 @@
     <commons-lang.version>2.6</commons-lang.version>
     <derby.version>10.8.2.2</derby.version>
     <gson.version>2.2.1</gson.version>
+    <h2db.version>1.3.171</h2db.version>
     <hsqldb.version>2.2.8</hsqldb.version>
     <javax-mail.version>1.4.4</javax-mail.version>
     <javax.servlet.version>2.5</javax.servlet.version>
@@ -396,6 +393,11 @@
       <!-- upgradingdave -->
       <dependency>
         <groupId>com.upgradingdave</groupId>
+        <artifactId>encryption</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>com.upgradingdave</groupId>
         <artifactId>model-fixtures</artifactId>
         <version>2.0-SNAPSHOT</version>
       </dependency>
@@ -406,14 +408,19 @@
       </dependency>
       <dependency>
         <groupId>com.upgradingdave</groupId>
-        <artifactId>test-utils</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <scope>test</scope>
+        <artifactId>jdbc</artifactId>
+        <version>2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>com.upgradingdave</groupId>
         <artifactId>jaxb-tools</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>com.upgradingdave</groupId>
+        <artifactId>test-utils</artifactId>
+        <version>2.0-SNAPSHOT</version>
+        <scope>test</scope>
       </dependency>
 
       <!-- Databases -->
@@ -427,7 +434,22 @@
         <artifactId>hsqldb</artifactId>
         <version>${hsqldb.version}</version>
       </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2db.version}</version>
+      </dependency>
 
+      <dependency>
+        <groupId>org.jasypt</groupId>
+        <artifactId>jasypt</artifactId>
+        <version>1.9.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jasypt</groupId>
+        <artifactId>jasypt-spring31</artifactId>
+        <version>1.9.0</version>
+      </dependency>
 
       <!-- eMail -->
       <dependency>
