--- a/test-utils/pom.xml
+++ b/test-utils/pom.xml
@@ -8,10 +8,37 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.upgradingdave</groupId>
   <artifactId>test-utils</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-maven-plugin</artifactId>
+        <version>2.0.5</version>
+        <configuration>
+          <propertyFile>src/test/resources/liquibase/testdb.properties</propertyFile>
+          <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>generate-test-resources</phase>
+            <goals><goal>update</goal></goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <configuration>
+          <mainClass>org.h2.tools.Console</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
     <dependency>
@@ -19,6 +46,21 @@
       <artifactId>junit</artifactId>
       <version>4.10</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.upgradingdave</groupId>
+      <artifactId>jdbc</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -36,7 +78,21 @@
     <dependency>
       <groupId>com.upgradingdave</groupId>
       <artifactId>models</artifactId>
-      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.upgradingdave</groupId>
+      <artifactId>model-fixtures</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.upgradingdave</groupId>
+      <artifactId>encryption</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
     </dependency>
   </dependencies>
 
