--- a/models/pom.xml
+++ b/models/pom.xml
@@ -32,6 +32,11 @@
       <scope>runtime</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
