--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>jdbc</module>
     <module>jaxb-tools</module>
     <module>test-utils</module>
+    <module>webtest</module>
   </modules>
 
   <properties>
@@ -47,7 +48,7 @@
     <!-- dependency versions -->
     <commons-lang.version>2.6</commons-lang.version>
     <derby.version>10.8.2.2</derby.version>
-    <gson.version>2.2.1</gson.version>
+    <gson.version>2.2.2</gson.version>
     <h2db.version>1.3.171</h2db.version>
     <hsqldb.version>2.2.8</hsqldb.version>
     <javax-mail.version>1.4.4</javax-mail.version>
@@ -517,6 +518,12 @@
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-tools-api</artifactId>
         <version>${maven-plugin-api.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.3.1</version>
       </dependency>
 
       <!-- Spring -->
