Fix small build issues

--- a/test-utils/src/test/resources/test.conf
+++ b/test-utils/src/test/resources/test.conf
@@ -1,4 +1,4 @@
 H2_JDBC_DRIVER_CLASS=org.h2.Driver
-H2_JDBC_URL=jdbc:h2:file:../db/testdb
+H2_JDBC_URL=jdbc:h2:file:/Users/dparoulek/code/upgradingdave-parent/db/testdb
 H2_JDBC_USER=SA
 H2_JDBC_PASSWORD=
