--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <module>models</module>
     <module>jdbc</module>
     <module>jaxb-tools</module>
-    <module>test-utils</module>
+    <!--<module>test-utils</module>-->
   </modules>
 
   <properties>
@@ -414,7 +414,7 @@
       <dependency>
         <groupId>com.upgradingdave</groupId>
         <artifactId>jaxb-tools</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>com.upgradingdave</groupId>
