--- a/models/pom.xml
+++ b/models/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.upgradingdave</groupId>
   <artifactId>models</artifactId>
   <packaging>jar</packaging>
-  <version>2.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <dependencies>
     <dependency>
